# CCSectionPlugins

./: README.md
.github/workflows/: build-macos.yml
qSectionProfile/: CMakeLists.txt  info.json  qSectionProfile.qrc
qSectionProfile/include/: SectionProfileDialog.h  SectionProfileExtractor.h  qSectionProfile.h
qSectionProfile/src/: SectionProfileDialog.cpp  SectionProfileExtractor.cpp  qSectionProfile.cpp
